--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
       <haed>
+            <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
             <title>sf007</title>
        </head>
       <body>
           <center>
-              <h1>sf007(smallfang)µÄÖ÷Ò³</h1>
+              <h1>sf007(smallfang)ÂµÃ„Ã–Ã·Ã’Â³</h1>
               <h2><a href="http://b.sf007.cf">my blog</a></h2>
               <address>
                   code allby sf007(smallfang) 2018
