--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <body>
           <center>
               <h1>sf007(smallfang)的主页</h1>
-              <h2><a href="http://b.sf007.cf">my blog</a></h2>
+              <h2><a href="http://b.sf007.cf">my blog</a>|<a href="about.html">about</a>|<a href="friends.html">友链</a></h2>
               <address>
                   code allby sf007(smallfang) 2018
               </address>
