--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <html>
-      <haed>
-            <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-            <title>sf007</title>
-       </head>
-      <body>
-          <center>
-              <h1>sf007(smallfang)的主页</h1>
-              <h2><a href="http://b.sf007.cf">my blog</a>|<a href="about.html">about</a>|<a href="friends.html">友链</a></h2>
-              <address>
-                  code allby sf007(smallfang) 
-              </address>
-          </center>
-         
-      </body>
+          <head>
+                     <title>sf007</title>
+                       <style>
+                                 body{
+                                             background-color:#e5f7f9;
+                                   }
+                                   p{
+                                              background-color:#e5f7f9;
+                                    }
+                       </style>
+                       <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Language" content="zh-cn" />
+          </head>
+          <body>
+                    <table width=100% height=100%><tr><td><center><p><span style="font-size:50px;color:black;font-family:等线Light">
+                 sf007(smallfang)的主页<br></span>
+<span style="font-size:17px;color:black;font-family:等线Light"><a href="http://www.sf007.cf" style="text-decoration:none">首页</a>|<a href="http://b.sf007.cf" style="text-decoration:none">博客</a>|<a href="about.html" style="text-decoration:none">关于</a>
+</span>
+             
+                </center></td></tr></table>
+           </body>
 </html>
