--- a/404.html
+++ b/404.html
@@ -1,16 +1,20 @@
 <html>
-      <haed>
-            <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-            <title>sf007|404</title>
-       </head>
-      <body>
-          <center>
-              <h1>404</h1>
-              <h2>什么都没有....</h2>
-              <address>
-                  code allby sf007(smallfang) 2018
-              </address>
-          </center>
-         
-      </body>
+          <head>
+                     <title>sf007|404</title>
+                       <style>
+                                 body{
+                                             background-color:#e5f7f9;
+                                   }
+                                   p{
+                                              background-color:#e5f7f9;
+                                    }
+                       </style>
+          </head>
+          <body>
+                    <table width=100% height=100%><tr><td><center><p><span style="font-size:50px;color:black;font-family:等线Light">
+                 404<br></span>
+<span style="font-size:20px;color:black;font-family:等线Light"><a href="http://www.sf007.cf">首页</a></a>
+             </span>
+                </center></td></tr></table>
+           </body>
 </html>
