--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <body>
                     <table width=100% height=100%><tr><td><center><p><span style="font-size:50px;color:black;font-family:等线Light">
                  sf007(smallfang)的主页<br></span>
-<span style="font-size:17px;color:black;font-family:等线Light"><a href="http://www.sf007.cf" style="text-decoration:none">首页</a>|<a href="http://b.sf007.cf" style="text-decoration:none">博客</a>|<a href="about.html" style="text-decoration:none">关于</a>
+<span style="font-size:17px;color:black;font-family:等线Light"><a href="http://www.sf007.cf" style="text-decoration:none">首页</a>|<a href="http://b.sf007.cf" style="text-decoration:none">博客</a>|<a href="about.html" style="text-decoration:none">关于</a>|招收作者
 </span>
              
                 </center></td></tr></table>
