--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
           <body>
                     <table width=100% height=100%><tr><td><center><p><span style="font-size:50px;color:black;font-family:等线Light">
                  404<br></span>
-<span style="font-size:20px;color:black;font-family:等线Light"><a href="http://www.sf007.cf">首页</a></a>
+<span style="font-size:20px;color:black;font-family:等线Light"><a href="http://www.smallfang.tk">首页</a></a>
              </span>
                 </center></td></tr></table>
            </body>
