--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <html>
           <head>
                      <title>sf007</title>
-                       <style>
-                                 body{
-                                             background-color:#e5f7f9;
-                                   }
-                                   p{
-                                              background-color:#e5f7f9;
-                                    }
-                       </style>
+                      
                        <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <meta http-equiv="Content-Language" content="zh-cn" />
           </head>
           <body>
+                    <div style="position:absolute;z-index:-1;width:100%;height:100%;">
+    	<img src="https://www.smallfang.tk/img/zc.jpeg" width="100%" height="100%" />
+</div>
                     <table width=100% height=100%><tr><td><center><p><span style="font-size:50px;color:black;font-family:等线Light">
                 smallfang的主页<br></span>
 <span style="font-size:17px;color:black;font-family:等线Light"><a href="http://www.smallfang.tk" style="text-decoration:none">首页</a>|<a href="http://blog.smallfang.tk" style="text-decoration:none">博客</a>|<a href="about.html" style="text-decoration:none">关于</a>|招收作者
