--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
           <head>
-                     <title>sf007</title>
+                     <title>smallfang</title>
                       
                        <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <meta http-equiv="Content-Language" content="zh-cn" />
