--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
           <head>
-                     <title>sf007|关于</title>
+                     <title>sf007|鍏充簬</title>
                        <style>
                                  body{
                                              background-color:#e5f7f9;
@@ -13,8 +13,9 @@
 <meta http-equiv="Content-Language" content="zh-cn" />
           </head>
           <body>
-               <center><h2>sf007|关于</h2></center>
-               <center><h3>qq:468828374 <br>wechat:???</h3></center>
+                    <img src="https://www.smallfang.tk/img/zc.jpeg" width="100%" height="100%">
+               <center><h2>smallfang|鍏充簬</h2></center>
+               <center><h3>qq:468828374 <br>wechat:</h3></center>
               <a href="index.html">return < </a>
            </body>
 </html>
