--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@
 <meta http-equiv="Content-Language" content="zh-cn" />
           </head>
           <body>
-                    <img src="https://www.smallfang.tk/img/zc.jpeg" width="100%" height="100%">
+                        <div style="position:absolute;z-index:-1;width:100%;height:100%;">
+    	<img src="https://www.smallfang.tk/img/zc.jpeg" width="100%" height="100%" />
+</div>
                <center><h2>smallfang|关于</h2></center>
                <center><h3>qq:468828374 <br>wechat:</h3></center>
               <a href="index.html">return < </a>
