--- a/404.html
+++ b/404.html
@@ -11,6 +11,9 @@
                        </style>
           </head>
           <body>
+                        <div style="position:absolute;z-index:-1;width:100%;height:100%;">
+    	<img src="https://www.smallfang.tk/img/errors.jpg" width="100%" height="100%" />
+</div>
                     <table width=100% height=100%><tr><td><center><p><span style="font-size:50px;color:black;font-family:等线Light">
                  404<br></span>
 <span style="font-size:20px;color:black;font-family:等线Light"><a href="http://www.smallfang.tk">首页</a></a>
