--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </div>
                     <table width=100% height=100%><tr><td><center><p><span style="font-size:50px;color:black;font-family:等线Light">
                 smallfang的主页<br></span>
-<span style="font-size:17px;color:black;font-family:等线Light"><a href="http://www.smallfang.tk" style="text-decoration:none">首页</a>|<a href="http://blog.smallfang.tk" style="text-decoration:none">博客</a>|<a href="about.html" style="text-decoration:none">关于</a>|招收作者
+<span style="font-size:17px;color:black;font-family:等线Light"><a href="http://www.smallfang.tk" style="text-decoration:none">首页</a>|<a href="http://blog.smallfang.tk" style="text-decoration:none">博客</a>|<a href="about.html" style="text-decoration:none">关于</a>
 </span>
              
                 </center></td></tr></table>
